tests/baselines/reference/nodeModulesAllowJsImportHelpersCollisions3(module=node16,target=es2015).errors.txt
subfolder/index.js(2,9): error TS2343: This syntax requires an imported helper named '__importDefault' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.


==== subfolder/index.js (1 errors) ====
    // cjs format file
    export {default} from "fs";
            ~~~~~~~
!!! error TS2343: This syntax requires an imported helper named '__importDefault' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
    export {default as foo} from "fs";
    export {bar as baz} from "fs";
==== index.js (0 errors) ====
    // esm format file
    export {default} from "fs";
    export {default as foo} from "fs";
    export {bar as baz} from "fs";
==== package.json (0 errors) ====
    {
        "name": "package",
        "private": true,
        "type": "module"
    }
==== subfolder/package.json (0 errors) ====
    {
        "type": "commonjs"
    }
==== types.d.ts (0 errors) ====
    declare module "fs";
    declare module "tslib" {
        export {};
        // intentionally missing all helpers
    }